@@ -61,6 +61,7 @@ t/16_signal.t
 t/17_rouse.t
 t/18_winder.t
 t/19_handle.t
+t/20_mutual_cancel.t
 
 EV/Makefile.PL
 EV/EV.pm
