@@ -7,6 +7,8 @@ TODO: cancel calling another coro that cancels ourselves => crash (CF_DELAYCANCE
 
 	- implement Coro->cancel in XS for a 20% speed improvement, and to
           be able to implement mutual cancellation.
+        - cancelling a coro while it itself is cancelling another coro is
+          now supported and working, instead of triggering an assertion.
 	- be a bit more crash-resistant when calling (buggy) on_destroy
           callbacks (best effort).
 
